Warn web developer on missing favicon for PaymentRequest UI.

Before this patch, a missing favicon would result in a blank space on
PaymentRequest UI on Android and no indication to the web developer that
something went wrong.

This patch adds a Mojo method PaymentRequestClient.WarnNoFavicon(),
which is invoked by the browser and implemented in the renderer. The
browser invokes the method when it finds no favicon and thus leaves a
blank space on UI. The renderer implementation prints a warning in
DevTools:

  "Favicon not found for PaymentRequest UI. User may not recognize the
   website."

After this patch, a missing favicon on a page that's using
PaymentRequest on Android results in a DevTools warning for the web
developer.

BUG=710002

Review-Url: https://codereview.chromium.org/2869893002
Cr-Commit-Position: refs/heads/master@{#472954}

Former-commit-id: 4b040be30ba61d2589511f2225a99d1dafeb46da