third_party/WebKit/Source/modules/payments/PaymentRequest.h
@@ -109,6 +109,7 @@ class MODULES_EXPORT PaymentRequest final
   void OnAbort(bool aborted_successfully) override;
   void OnCanMakePayment(
       payments::mojom::blink::CanMakePaymentQueryResult) override;
+  void WarnNoFavicon() override;
 
   void OnCompleteTimeout(TimerBase*);
 
